--- a/package.json
+++ b/package.json
@@ -4,24 +4,54 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && vite build --ssr",
-    "typecheck": "tsc --noEmit"
+    "lint": "npm-run-all --parallel --silent lint:typecheck lint:eslint",
+    "lint:eslint": "eslint ./resources/js --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0",
+    "lint:eslint:fix": "eslint ./resources/js --ext ts,tsx,js --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint:stylelint": "stylelint \"**/*.scss\"",
+    "lint:stylelint:fix": "stylelint \"**/*.scss\" --fix",
+    "lint:typecheck": "tsc --noEmit",
+    "lint:prettier:check": "prettier . --check",
+    "lint:prettier:write": "prettier . --write",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:benchmark": "vitest bench"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.19",
     "@inertiajs/react": "^1.0.16",
     "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "jsdom": "^24.0.0",
     "laravel-vite-plugin": "^1.0.2",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.2.9"
+    "vite": "^5.2.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^1.5.0"
+  },
+  "volta": {
+    "node": "20.12.2"
   }
 }
